# mpwrd-config

./: .gitignore  AGENTS.md  README.md  mpwrd-config  pyproject.toml  setup.cfg
.github/workflows/: apt-repo.yml  deb-ci.yml  deb-release.yml  poetry-ci.yml  poetry-release.yml
apt/: InRelease  Packages  Release  Release.gpg  mpwrd-config-archive-keyring.asc  mpwrd-config_0.0.1-1_all.deb  mpwrd-config_0.0.2-1_all.deb
debian/: changelog  control  copyright  mpwrd-config.install  mpwrd-config.postinst  mpwrd-config.postrm  rules
docs/: feature-gap.md  refactor-plan.md
mpwrd_config/: __init__.py  cli.py  core.py  kernel_modules.py  meshtastic.py  software_manager.py  software_packages.py  system.py  system_utils.py  time_config.py  tui_dialog.py  tui_entry.py  watchclock.py  web.py  wifi_mesh.py
mpwrd_config/web_static/: style.css
mpwrd_config/web_templates/: base.html  dashboard.html  login.html
mpwrd_config/web_templates/partials/: software_packages.html
systemd/: femto-watchclock.service  femto-wifi-mesh.service  mpwrd-config-web.service  mpwrd-config-web.socket
systemd/pam.d/: mpwrd-config-web
tests/: test_core_config.py
