[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mpwrd-config"
version = "0.0.3"
description = "MPWRD configuration tooling (Python-first, KISS)"
authors = ["Ruledo <ruledo707@gmail.com>", "vidplace7 <vidplace7@gmail.com>"]
readme = "README.md"
packages = [{include = "mpwrd_config"}]
include = [
    "mpwrd_config/web_templates/*.html",
    "mpwrd_config/web_templates/partials/*.html",
    "mpwrd_config/web_static/*.css",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
tomli = ">=2.4.0"
tomli-w = ">=1.2.0"
fastapi = ">=0.129.0"
uvicorn = ">=0.27.0"
jinja2 = ">=3.1.0"
python-multipart = ">=0.0.22"
itsdangerous = ">=2.1.2"
python-pam = ">=2.0.0"
six = ">=1.16.0"
InquirerPy = ">=0.3.4"
meshtastic = ">=2.7.7,<3.0.0"
protobuf = ">=6.0.0"

[tool.poetry.scripts]
mpwrd-config = "mpwrd_config.tui_entry:main"
mpwrd-config-cli = "mpwrd_config.cli:main"
