[metadata]
name = mpwrd-config
version = 0.1.8
description = MPWRD configuration tooling (Python-first, KISS)

[options]
packages = mpwrd_config
include_package_data = True
python_requires = >=3.10
install_requires =
    tomli>=2.0.1
    tomli-w>=1.0.0
    six>=1.16.0
    InquirerPy>=0.3.4
    meshtastic>=2.7.0
    protobuf>=3.20.0

[options.entry_points]
console_scripts =
    mpwrd-config = mpwrd_config.tui_entry:main
    mpwrd-config-cli = mpwrd_config.cli:main
